Updated css style and fixed some pages on tablets

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,7 +26,7 @@
         padding: 21px 0;
     }
     .header-area.stick .main-menu ul.navbar-nav li a {
-        padding: 28px 0px;
+        /* padding: 28px 0px; */
     }
     .header-area-6.stick .main-menu ul.navbar-nav li a {
         padding: 25px 15px;
@@ -95,15 +95,15 @@
     margin-top: 0px;
 }
     .header-area .main-menu ul.navbar-nav > li > a {
-        font-size: 12px;
+        font-size: 15px;
         margin: 0px 6px;
-        padding: 30px 0px;
+        /* padding: 30px 0px; */
     }
     .header-area.stick .main-menu ul.navbar-nav > li > a,
     .header-area-3.stick .main-menu ul.navbar-nav > li > a{
-        font-size: 12px;
+        font-size: 15px;
         margin: 0px 6px;
-        padding: 27px 0px;
+        /* padding: 27px 0px; */
     }
     .header-area-3 .main-menu ul.navbar-nav > li > a {
         padding: 30px 0px;
@@ -601,6 +601,11 @@
         margin-bottom: 0px;
         margin-top: 20px;
     }
+    .community .about-page-area .about-image {
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .texti-name {
         padding-left: 6px;
     }
@@ -854,6 +859,9 @@
 .mob-cont-down{
   padding-top: 300px;
 }
+.community .mob-cont-down{
+    padding-top: 360px;
+}
 .mob-img-up1{
   position: absolute;
   width: 90%;
@@ -864,15 +872,30 @@
 .mob-cont-down1{
   padding-top: 200px;
 }
+.community .mob-cont-down1 {
+    padding-top: 260px;
+}
 .mob-cont-down2{
   padding-top: 225px;
 }
+.community .mob-cont-down2 {
+    padding-top: 285px;
+}
+
 .mob-cont-down3{
   padding-top: 290px;
 }
+.community .mob-cont-down3 {
+    padding-top: 350px;
+}
+
 .mob-cont-down4{
   padding-top: 290px;
 }
+.community .mob-cont-down4 {
+    padding-top: 350px;
+}
+
 .mob-cont-down5{
   padding-top: 288px;
 }
@@ -951,4 +974,10 @@ margin-top: -1px;
   padding-top: 375px;
 }
 
+}
+
+@media only screen and (max-width: 450px) {
+    .community .about-page-area .about-image {
+        width: 90%;
+    }
 }
