--- a/css/style.css
+++ b/css/style.css
@@ -8745,7 +8745,7 @@ h3.blog-text-color {
   font-size: 20px;
   letter-spacing: 0px;
   font-family: Arial;
-  font-weight: 100;
+  font-weight: normal;
   line-height: 40px;
 }
 
@@ -9427,7 +9427,7 @@ span.color:hover {
   
   li.nav-btn-start .nav-start-btn.right-btn.ready-btn-big {
     padding: 12px 5px !important;
-    width: 130px;
+    width: 140px;
   }
   
   label {
@@ -9748,7 +9748,7 @@ margin-top: 0px;
 
 @media only screen and (width: 768px) {
   .nav-padding {
-    padding-left: 85px;
+    padding-left: 15px;
   }
 }
 
@@ -10069,10 +10069,6 @@ margin-top: 0px;
   }
 
   /* ARx */
-
-  .health-literacy p {
-    font-weight: normal;
-  }
   .health-literacy .breadcrumb {
     padding: 40px 0px;
   }
